--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -1,1 +1,32 @@
-<h2>Gallery</h2>
+<!-- <h2>Gallery</h2> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery</title>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class = "container">
+        <div class="row">
+            <div class = "col-md-5">
+                hey Carol
+            </div>
+            <div class = "col-md-7">
+                Good job!
+            </div>
+
+        </div>
+
+    </div>
+
+</body>
+
+</html>
