structuring gallery html using bootstrap classes

--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -13,14 +13,34 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="m-5">
     <div class = "container">
         <div class="row">
             <div class = "col-md-5">
-                hey Carol
+                <div class="card">
+                    <div class="card-header">
+                        Categories
+                    </div>
+                    <ul class = "list-group list-group-flush">
+                        <li class="list-group-item">Travel</li>
+                        <li class="list-group-item">Food</li>
+                        <li class="list-group-item">Artists</li>
+
+                    </ul>
+
+                </div>
             </div>
             <div class = "col-md-7">
-                Good job!
+                <div class="row">
+                    <div class="card">
+                        <img class="card-img-top" src="" alt="Card Image Top">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate voluptatum delectus, cum aperiam atque, dolores assumenda tempora dolorum enim libero deserunt quis suscipit facilis laborum aspernatur recusandae ab cupiditate a.</p>
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
 
         </div>
