straucturing gallery file

--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -14,14 +14,14 @@
 </head>
 
 <body class="m-5">
-    <div class = "container">
+    <div class="container">
         <div class="row">
-            <div class = "col-md-5">
+            <div class="col-md-5">
                 <div class="card">
                     <div class="card-header">
                         Categories
                     </div>
-                    <ul class = "list-group list-group-flush">
+                    <ul class="list-group list-group-flush">
                         <li class="list-group-item">Travel</li>
                         <li class="list-group-item">Food</li>
                         <li class="list-group-item">Artists</li>
@@ -30,17 +30,54 @@
 
                 </div>
             </div>
-            <div class = "col-md-7">
+            <div class="col-md-7">
                 <div class="row">
-                    <div class="card">
-                        <img class="card-img-top" src="" alt="Card Image Top">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate voluptatum delectus, cum aperiam atque, dolores assumenda tempora dolorum enim libero deserunt quis suscipit facilis laborum aspernatur recusandae ab cupiditate a.</p>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top"
+                                src="https://images.unsplash.com/photo-1524726240783-939bfdd633e2?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYXZlbCUyMCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                                alt="Card Image Top">
+                            <div class="card-body">
+                                <small>Category: Travel Destination</small>>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1" href="#">View</a>
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-md-4">
+
+                        <div class="card">
+                            <img class="card-img-top" src="https://images.unsplash.com/photo-1524726240783-939bfdd633e2?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYXZlbCUyMCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Card Image Top">
+                            <div class="card-body">
+                                <small>Category: Travel Destination</small>>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1" href="#">View</a>
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-4">
+
+
+                        <div class="card">
+                            <img class="card-img-top"
+                                src="https://images.unsplash.com/photo-1524726240783-939bfdd633e2?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYXZlbCUyMCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                                alt="Card Image Top">
+                            <div class="card-body">
+                                <small>Category: Travel Destination</small>>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1" href="#">View</a>
+
                         </div>
 
                     </div>
 
                 </div>
+
             </div>
 
         </div>
