--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -33,18 +33,22 @@
             </div>
             <div class="col-md-7">
                 <div class="row">
+                    {% for photo in photos %}
                     <div class="col-md-4">
                         <div class="card">
                             <img class="card-img-top"
-                                src="https://images.unsplash.com/photo-1524726240783-939bfdd633e2?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYXZlbCUyMCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                                src="{{photo.photo.url}}"
                                 alt="Card Image Top">
                             <div class="card-body">
-                                <small>Category: Travel Destination</small>
+                                <small>Category: {{photo.category.name}} </small>
                             </div>
                             <a class="btn btn-outline-dark btn-sm m-1" href="{% url 'view_photo' %}">View</a>
 
                         </div>
                     </div>
+                    {% empty %}
+                    <h3>No photos...</h3>
+                    {% endfor %}
 
 
 
