--- a/photos/templates/photo.html
+++ b/photos/templates/photo.html
@@ -14,6 +14,10 @@
             <div class="col">
 
                 <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
+                <div style="height:90vh;">
+                    <img style="max-width: 100%; max-height: 100%;" src="{{photo.photo.url}}"alt="">
+                    <p> {{photo.description}} </p>
+                </div>
     
 </body>
 </html>
