adding a new photo

--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -42,7 +42,7 @@
                             <div class="card-body">
                                 <small>Category: {{photo.category.name}} </small>
                             </div>
-                            <a class="btn btn-outline-dark btn-sm m-1" href="{% url 'view_photo' %}">View</a>
+                            <a class="btn btn-outline-dark btn-sm m-1" href="#">View</a>
 
                         </div>
                     </div>
