--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -11,12 +11,20 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{static 'css/style.css}">
+
 </head>
 
 <body class="m-5">
+    <div class="container-fluid">
+        <h1>Welcome to My Gallery</h1>
+    </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-3">
                 <div class="card">
                     <div class="card-header">
                         Categories
@@ -37,28 +45,69 @@
 
                     </ul>
                 </div>
-
             </div>
+
             <div class="col-md-9">
                 <div class="row">
 
                     {% for photo in photos %}
                     <div class="col-md-4">
                         <div class="card my-2">
+                            <!-- <div class="card" data-toggle="modal" data-target="#{{image.id}}"></div> -->
                             <img class="image-thumbail" src="{{photo.image.url}}" alt="Card image cap">
 
-                            <div class="card-body">
-                                <small>Category: {{photo.category.name}}</small>
-                            </div>
-                            <a href="{% url 'photo' %}" class="btn btn-outline-dark btn-sm m-1">View</a>
-                        </div>
-                    </div>
-                    {% empty %}
-                    <h3>No photos...</h3>
-                    {% endfor %}
+                            <!-- <div class="card-body"> -->
+                                <h4><b>Category: {{photo.category.name}}</b></h4>
+                                <hr>
+                                <h6>Name: {{photo.photo_name}}</h6>
+                                
+                                <div class="card" >
+                                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal{{photo.id}}" onclick="imageurl('{{photo.id}}-url')">View</button>
+                                    <!-- <input class="form-control input-lg" type="text" id="{{photo.id}}-url"> -->
 
+                                </div>
+                                <!-- Modal -->
+                                <div id="myModal{{photo.id}}" class="modal fade" role="dialog">
+                                    <div class="modal-dialog">
+
+                                        <!-- Modal content-->
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close"
+                                                    data-dismiss="modal">&times;</button>
+                                                    <img src="{{photo.image.url}}" alt="">
+                                                <h4 class="modal-title">{{photo.photo_name}}</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p><b> {{photo.description}}</b></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        {% empty %}
+                        <h3>No photos...</h3>
+                        {% endfor %}
+
+                    </div>
                 </div>
             </div>
+            <script>
+                //  <!-- script-->
+                function imageurl(element) {
+                    var image = document.getElementById(element);
+                    image.select();
+                    document.execCommand('copy');
+                    alert("Copied the link of image: " + image.value);
+                }
+            </script>
         </div>
     </div>
 
