--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -20,7 +20,7 @@
                 <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search Photo" name="imae">
+                        <input type="text" class="form-control" placeholder="Search Photo" name="image">
                         <div class="input-group-btn">
                             <button class="btn btn-default" type="submit"><i
                                     class="glyphicon glyphicon-search"></i></button>
