--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -50,11 +50,11 @@
             <div class="col-md-9">
                 <div class="row">
 
-                    {% for photo in photos %}
+                    {% for img in photo %}
                     <div class="col-md-4">
                         <div class="card my-2">
                             <!-- <div class="card" data-toggle="modal" data-target="#{{image.id}}"></div> -->
-                            <img class="image-thumbail" src="{{photo.image.url}}" alt="Card image cap">
+                            <img class="image-thumbail" src="{{img.photo.url}}" alt="Card image cap">
 
                             <!-- <div class="card-body"> -->
                                 <h4><b>Category: {{photo.category.name}}</b></h4>
@@ -67,7 +67,7 @@
 
                                 </div>
                                 <!-- Modal -->
-                                <div id="myModal{{photo.id}}" class="modal fade" role="dialog">
+                                <div id="myModal{{img.id}}" class="modal fade" role="dialog">
                                     <div class="modal-dialog">
 
                                         <!-- Modal content-->
@@ -75,7 +75,7 @@
                                             <div class="modal-header">
                                                 <button type="button" class="close"
                                                     data-dismiss="modal">&times;</button>
-                                                    <img src="{{photo.image.url}}" alt="">
+                                                    <img src="{{img.photo.url}}" alt="">
                                                 <h4 class="modal-title">{{photo.photo_name}}</h4>
                                             </div>
                                             <div class="modal-body">
