--- a/photos/templates/gallery.html
+++ b/photos/templates/gallery.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{static 'css/style.css}">
+    <!-- <link rel="stylesheet" href="{static 'css/style.css}"> -->
 
 </head>
 
@@ -33,7 +33,7 @@
                         <li class="list-group-item">
                             <a href="{% url 'gallery' %}">All</a>
                         </li>
-                        {% for category in categories %}
+                        {% for cat in categories %}
                         <li class=" list-group-item">
                             <a href="{% url 'gallery' %}?category={{category.name}}">
                                 {{category.name}}
@@ -50,11 +50,11 @@
             <div class="col-md-9">
                 <div class="row">
 
-                    {% for img in photo %}
+                    {% for photo in photos %}
                     <div class="col-md-4">
                         <div class="card my-2">
                             <!-- <div class="card" data-toggle="modal" data-target="#{{image.id}}"></div> -->
-                            <img class="image-thumbail" src="{{img.photo.url}}" alt="Card image cap">
+                            <img class="image-thumbail" src="{{photo.image.url}}" alt="Card image cap">
 
                             <!-- <div class="card-body"> -->
                                 <h4><b>Category: {{photo.category.name}}</b></h4>
@@ -67,7 +67,7 @@
 
                                 </div>
                                 <!-- Modal -->
-                                <div id="myModal{{img.id}}" class="modal fade" role="dialog">
+                                <div id="myModal{{photo.id}}" class="modal fade" role="dialog">
                                     <div class="modal-dialog">
 
                                         <!-- Modal content-->
@@ -75,7 +75,7 @@
                                             <div class="modal-header">
                                                 <button type="button" class="close"
                                                     data-dismiss="modal">&times;</button>
-                                                    <img src="{{img.photo.url}}" alt="">
+                                                    <img src="{{photo.image.url}}" alt="">
                                                 <h4 class="modal-title">{{photo.photo_name}}</h4>
                                             </div>
                                             <div class="modal-body">
